testsuite/tests/typecheck/should_fail/AssocTyDef08.hs
module AssocTyDef07 where

class Cls a where
    type Typ a = Int
     -- Default without family OR extension flag
