testsuite/tests/typecheck/should_fail/AssocTyDef08.stderr

AssocTyDef08.hs:4:10: error: [GHC-54721]
    ‘Typ’ is not a (visible) associated type of class ‘Cls’
